<resources>
    <string name="app_name">PhysicsLab</string>
    <string name="descImagePreStart">Image for pre strart</string>
    <string name="titleTheoryExcercise">Problemas teóricos</string>
    <string name="mur">MUR</string>
    <string name="mua">MUA</string>
    <string name="muc">MCU</string>
    <string name="ExperimentsTilte">Experimentos con mi smartphone</string>
    <string name="murText">Desliza el avión y sabrá con qué velocidad lo hizo</string>
    <string name="txtmua">Deje caer su celular sobre una superficie blanda para saber la distancia que recorre</string>
    <string name="txtmuc">Antes de iniciar ingrese el número de vueltas y el radio en el que va a hacer girar el celular.</string>
    <string name="problemsMur">Problema n° 1) Calcula el tiempo que tarda el sonido en recorrer:
        \n
        \na) 10 m.
        \nb) 12 m.
        \nc) 15 m.
        \nd) 20 m.
        \n
        \nNota: Compruebe sus calculos en la sección experimental de MRU.</string>
    <string name="problemsMur2">Problema n° 2) Durante una tempestad se escucha un trueno 8 s después de haber percibido el relámpago. ¿A qué distancia cayó el rayo?</string>
    <string name="problemsMur3">Problema n° 3) Se produce un disparo a 2,04 Km de donde se encuentra un policía, ¿cuánto tarda el policía en oírlo si consideramos la velocidad del sonido en el aire de 340 m/s?</string>
    <string name="titleMur">Ejercicios</string>
    <string name="problemsMua">Problema n° 1) Determinar el tiempo que tarda un objeto en caer a una altura de:
        \n
        \na) 1 m.
        \nb) 1,5 m.
        \nb) 2 m.
        \nb) 3 m.
        \n
        \nNota: Compruebe sus calculos en la sección experimental de MAU.</string>
    <string name="problemsMua2">Problema n° 2) Una manzana cae de un árbol y llega al suelo en 3 segundos. ¿De qué altura cayó la manzana?</string>
    <string name="problemsMua3">Problema n° 3) Desde una altura de 120 m, se deja caer libremente una pelota. Responder:
        \n
        \na) ¿Cuánto ha descendido en 3 s?
        \nb) ¿Cuánto le falta en recorrer?
    </string>
    <string name="problemsMuc">Problema n° 1) Por una pendiente se deja rodar un cilindro de radio 20 cm. Calcule su velocidad tangencial y su velocidad angular al final del trayecto si este recorre una distancia de:
        \n
        \na) 50 cm
        \nb) 75 cm
        \nc) 100 cm
        \n
        \nNota: Compruebe sus calculos en la sección experimental de MCUA.</string>
    <string name="problemsMuc2">Problema n° 2) Si un motor cumple 8000 R.P.M., determinar:
        \n
        \na) ¿Cuál es su velocidad angular?
        \nb) ¿Cuál es su período?</string>
    <string name="problemsMuc3">Problema n° 2) Un móvil dotado de M.C.U. da 280 vueltas en 20 minutos, si la circunferencia que describe es de 80 cm de radio, hallar:
        \n
        \na) ¿Cuál es su velocidad angular?
        \nb) ¿Cuál es su velocidad tangencial?
        \nc) ¿Cuál es la aceleración centrípeta?</string>
    <string name="theoryMua">Movimiento uniforme acelerado (MAU)</string>
    <string name="theoryMur">Movimiento uniforme rectilíneo (MRU)</string>
    <string name="theoryMuc">Movimiento circular uniformemente acelerado (MCUA)</string>
    <string name="digiteRadio">Radio (m)</string>
    <string name="digiteLaps">Vueltas</string>
    <string name="description">Image for move</string>
    <string name="murexperimentsound">Vamos a calcular la velocidad del sonido</string>
    <string name="title_menu_sensor">Sensores de mi smartphone</string>
    <string name="label_mov">De movimiento</string>
    <string name="label_pos">De posición</string>
    <string name="label_amb">De entorno</string>
    <string name="info_accel">Indica la fuerza de aceleración en el eje X, Y y Z (incluida la gravedad) en m/s². Detección de movimiento (agitación, inclinación, etc.).</string>
    <string name="info_accelWhithout">Indica la fuerza de aceleración en el eje X, Y y Z (sin incluir la gravedad) en m/s². Supervisa la aceleración a lo largo de un solo eje.</string>
    <string name="info_gyro">Indica la rotación alrededor del eje X, Y y Z en rad/s. Sirve para la detección de rotación (agitación, giro, etc.).</string>
    <string name="info_magne">Mide el campo geomagnético ambiental de los tres ejes físicos (x, y, z) en μT. Sirve para la creación de una brújula o detección de imanes.</string>
    <string name="info_orientation">Mide los grados de rotación de un dispositivo alrededor de los tres ejes físicos (x, y, z). Determina la posición del dispositivo.</string>
    <string name="info_proximity">Mide en cm la proximidad de un objeto con respecto a la pantalla de visualización de un dispositivo. Este sensor en general se usa para determinar si un dispositivo manual se está sosteniendo cerca del oído de una persona. Nota: algunos dispositivos solo muestran dos estados del sensor, si está detectando objeto o no.</string>
    <string name="info_gps">Determina la latitud, longitud, altitud del dispositivo</string>
    <string name="info_temp">Mide la temperatura ambiente de la habitación en grados Celsius (°C).</string>
    <string name="info_light">Mide el nivel de luz ambiental (iluminación) en lx. Es útil en el dispositivo para el control del brillo de la pantalla.</string>
    <string name="info_pressure">Mide la presión del aire del ambiente en hPa o mbar.</string>
    <string name="label_warning_sensor_proximity">*No es posible realizar este experimento en este dispositivo porque no cuenta con sensor de proximidad</string>
    <string name="label_warning_sensor_gyro">*No es posible realizar este experimento en este dispositivo porque no cuenta con sensor giroscópico</string>
</resources>
