<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".features.sensors.position.MenuPositionSensor">

    <TextView
        android:id="@+id/titleMenuSensorPos"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sensores de posición"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnMagnetometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner_white"
            android:padding="20dp"
            app:srcCompat="@drawable/ic_book" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Magnetómetro"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/disable_magne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_magne"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner_white"
            android:padding="20dp"
            app:srcCompat="@drawable/ic_book" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Orientación"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/disable_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_orientation"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnProx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner_white"
            android:padding="20dp"
            app:srcCompat="@drawable/ic_book" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Proximidad"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/disable_proximity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_proximity"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>