<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".features.sensors.environmental.MenuEnvironmental">

    <TextView
        android:id="@+id/titleMenuSensorMov"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sensores de entorno"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner_white"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleMenuSensorMov"
            app:srcCompat="@drawable/ic_book" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Temperatura ambiente"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/btnAccelerometer"
                    app:layout_constraintTop_toBottomOf="@+id/titleMenuSensorMov" />
                <TextView
                    android:id="@+id/disable_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_temp"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/btnAccelerometer2"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner_white"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAccelerometer"
            app:srcCompat="@drawable/ic_book" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Luz"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/btnAccelerometer2"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
                <TextView
                    android:id="@+id/disable_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_light"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/btnAccelerometer"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner_white"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAccelerometer2"
            app:srcCompat="@drawable/ic_book" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Presión"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/btnGyro"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />
                <TextView
                    android:id="@+id/disable_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pressure"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/btnGyro"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>